# src/types.ts
@@ -8,7 +8,9 @@ export type {
   EverestInstallResult,
   EverestRelease,
   EverestReleaseList,
+  GameStatus,
   InstalledModMatch,
+  LaunchResult,
   MapStats,
   ModCatalogDependencyResolution,
   ModCatalogDependencyResolutionResult,
